# file-storage

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: dc017769bcdd_create_table.py
src/app/: main.py
src/app/api/: main.py
src/app/api/routes/: delete.py  list.py  upload.py
src/app/core/: config.py
src/app/core/database/: db_config.py
src/app/core/logging/: logger.py
src/app/core/storage/: file_storage.py  google_cloud_storage.py  s3_storage.py  storage_base.py  storage_factory.py
src/app/entity/: base.py  file_metadata.py
src/app/model/: enum.py  file_storage_base_model.py  upload_model.py
src/app/repository/: file_metadata_repository.py
src/app/service/: delete_service.py  list_service.py  upload_service.py
src/cli/: main.py  service.py
tests/app/: conftest.py
tests/app/api/routes/: test_delete.py  test_list.py  test_upload.py
tests/app/core/database/: test_db_config.py
tests/app/core/storage/: test_file_storage.py  test_google_cloud_storage.py  test_s3_storage.py  test_storage_factory.py
tests/app/repository/: test_file_metadata_repository.py
tests/app/service/: test_delete_service.py  test_list_service.py  test_upload_service.py
tests/cli/: test_main.py  test_service.py
